revised mtheta fig

--- a/Manuscript/msv2.tex
+++ b/Manuscript/msv2.tex
@@ -455,7 +455,7 @@ Together this suggests that although density-dependent straying does not appear 
 singlelinecheck=false
 }
   \centering
-  \includegraphics[width=0.8\textwidth]{figs2/fig_MDPE_hm_mtheta.pdf}
+  \includegraphics[width=0.8\textwidth]{figs2/fig_MDPE_hm_mtheta_rt.pdf}
   \caption{
   Assuming that the rate of straying is linked directly to habitat heterogeneity. A low stray rate corresponds to very different (or distant) habitats (high $\Delta\theta$), whereas a higher rate of straying corresponds to very similar (or nearby) habitats (low $\Delta\theta$). Light colors = high values.
   } \label{fig:mtheta}
@@ -471,10 +471,10 @@ singlelinecheck=false
   %%% (!!!) Even low levels of straying from distant populations can result in highly divergent alternative steady states! THIS IS A COOL RESULT
 
 \noindent{\bf (d) Distance dependent straying and habitat heterogeneity}\\ 
-\noindent We have so far treated $\Delta\theta$ and $m$ as independent parameters, however we may also assume that if environmental heterogeneity increases with distance, the rate of straying may be expected to decline given that individuals are less likely to stray into distant habitats. %-- in particular North-South difference if trait optimality is largely temperature-dependent --
-If we incorporate this interdependence of $m$ and $\Delta\theta$, low rates of straying would correspond to mixing dissimilar (distant) populations, and high rates of straying would correspond to mixing similar (nearby) populations.
+\noindent We have so far treated $\Delta\theta$ and $m$ as independent parameters, however we may also assume that if environmental heterogeneity increases with distance, the rate of straying may be expected to decline given that individuals will stray less into distant habitats. %-- in particular North-South difference if trait optimality is largely temperature-dependent --
+If we incorporate this interdependence of $m$ and $\Delta\theta$, low rates of straying correspond to mixing dissimilar (distant) populations, and high rates of straying would correspond to mixing similar (nearby) populations.
 
-Here we find that alternative stable states now appear for low straying rates ($m<0.15$) and over any value of trait heritability $h^2<1$.
+Here we find that alternative stable states now appear for low straying rates ($m<0.15$).
 As the straying rate increases, a single stable state emerges with a correspondingly high $N_T$.
 As before, there is a spike in the PE at the fold bifurcation separating the alternative stable state regime from the single stable state regime, and a sharp decline in the PE as the straying rate becomes very low.
 This is in accordance with intuition as increasing straying rates mean that two very similar populations are mixing, such that the rate of recruitment is less influenced by gene flow.
